Sync misc images: remove deleted assets from lists, add GIF optimization to script
Made-with: Cursor

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "npx serve .",
     "optimize-images": "node scripts/optimize-images.js",
     "update-content": "node scripts/csv-to-content.js",
-    "export-content": "node scripts/json-to-csv.js"
+    "export-content": "node scripts/json-to-csv.js",
+    "optimize-images-misc": "node scripts/optimize-images.js misc"
   },
   "dependencies": {},
   "devDependencies": {
